--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,9 @@
   "extends": [
     "plugin:react/recommended",
     "airbnb",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "prettier/@typescript-eslint",
+    "plugin:prettier/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -17,13 +19,17 @@
     "sourceType": "module"
   },
   "plugins": [
+    "prettier",
     "react",
     "@typescript-eslint",
     "react-hooks",
     "eslint-plugin-import-helpers"
   ],
   "rules": {
+    "prettier/prettier": "error",
     "no-use-before-define": "off",
+    "react/prop-types": "off",
+    "react/jsx-one-expression-per-line": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
@@ -45,7 +51,9 @@
         "groups": [
           "/^react/",
           "module",
-          ["parent", "sibling", "index"]
+          ["parent", "sibling", "index"],
+          "/^styles/",
+          "/^./styles/"
         ],
         "alphabetize": { "order": "asc", "ignoreCase": true }
       }
